Initial milestone project commit. Basic functionality

--- a/templates/error.html
+++ b/templates/error.html
@@ -73,6 +73,11 @@
           </form>
         </div>
 
+        <div class="col-lg-9">
+            <h2>Sorry, an error occured...</h2>
+          <h3> {{ error }}  </h3>
+        </div>
+
       </div>
     </div>
 
